# OOP-Projects

./: Apartament.h  CMakeLists.txt  Camera.cpp  Camera.h  Cerere.cpp  Cerere.h  Grup.cpp  Grup.h  Hotel.cpp  Hotel.h  Incapere.cpp  Incapere.h  Participant.cpp  Participant.h  README.md  Sala.cpp  Sala.h  main.cpp
Hotel/: Apartament.cpp  CMakeLists.txt  Camera.h  Cerere.h  Grup.cpp  Grup.h  Hotel.h  Incapere.cpp  Participant.cpp  Sala.cpp  main.cpp
Laundry/: CMakeLists.txt  Camasa.cpp  Camasa.h  Comanda.cpp  Comanda.h  Costum.cpp  Costum.h  Geaca.cpp  Geaca.h  Haine.cpp  Haine.h  Masina.cpp  Masina.h  MasinaCalcat.cpp  MasinaCalcat.h  MasinaSpalat.cpp  MasinaSpalat.h  MasinaStors.cpp  MasinaStors.h  MasinaUscat.cpp  MasinaUscat.h  Operatiune.cpp  Operatiune.h  Palton.cpp  Palton.h  Pantaloni.cpp  Pantaloni.h  Rochie.cpp  Rochie.h  Sacou.cpp  Sacou.h  Spalatorie.cpp  Spalatorie.h  main.cpp
labTests/: C17
