cmake_minimum_required(VERSION 3.17)
project(main)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp Haine.h Haine.cpp Masina.cpp Masina.h Comanda.cpp Comanda.h Operatiune.cpp Operatiune.h MasinaSpalat.cpp MasinaSpalat.h MasinaStors.cpp MasinaStors.h Spalatorie.cpp Spalatorie.h MasinaCalcat.cpp MasinaCalcat.h MasinaUscat.h MasinaUscat.cpp Pantaloni.cpp Pantaloni.h)